Fix display on mobile devices when data are loading

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,8 @@
   }
 
   #content {
-    max-width: 100%;
+    max-width: none;
+    width: 100%;
     height: 100%;
 
     border-left: none;
